[tool.poetry]
name = "stack-pusher"
version = "0.1.0"
description = ""
authors = ["Wyatt Ferguson <wyattf@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.7.1"
pyxel = "^2.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
