[project]
name = "stack-pusher"
version = "0.1.0"
description = "A remake of the classic flash game ores with Pyxels. This project is basically a rough demo, that I would like to port to the Gameboy in the near future."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyxel>=2.2.10",
]
